--- a/myfrontend/index.html
+++ b/myfrontend/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="src/assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Extracurrifit</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- Insertamos el mensaje aquí -->
-    <p>Hola, esta es la historia de usuario editada por Juan Garzón</p>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-s
